--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   provider: ^6.0.0
   weather: ^2.0.1
   geolocator: ^7.6.0
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
