--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.0
-  weather: ^2.0.1
+  http: ^0.13.3
   geolocator: ^7.6.0
   flutter_spinkit: ^5.1.0
 
