--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   http: ^0.13.3
   geolocator: ^7.6.0
   flutter_spinkit: ^5.1.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
