--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  provider: ^6.0.0
+  
   http: ^0.13.3
   intl: ^0.17.0
   geolocator: ^7.6.0
-  flutter_spinkit: ^5.1.0
-  
+  weather_icons: ^3.0.0
 
 dev_dependencies:
   flutter_test:
