--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   intl: ^0.17.0
   geolocator: ^7.6.0
   weather_icons: ^3.0.0
+  flutter_bloc: ^8.0.1
 
 dev_dependencies:
   flutter_test:
